Initial search box commit

--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="./css/style.css">
+		<script src="./js/script.js"></script>
 	</head>
 	<body>
+		<div id="wrapper">
+			<div class="nav-container">
+				<input id="search" />
+			</div>
+		</div>
 	</body>
 </html>
