Initial links commit.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,45 @@
 		<script src="./js/script.js"></script>
 	</head>
 	<body>
-		<div id="wrapper">
-			<div class="nav-container">
-				<input id="search" />
+		<div class="nav-container">
+			<input id="search" />
+			<div class="links-list">
+				<div class="links-box" id="social-links">
+					<div class="links-titlebar">social</div>
+					<div class="links-body">
+						<a href="https://facebook.com">facebook</a>
+						<a href="https://twitter.com">twitter</a>
+						<a href="https://linkedin.com">linkedin</a>
+						<a href="https://reddit.com">reddit</a>
+					</div>
+				</div>
+				<div class="links-box" id="media-links">
+					<div class="links-titlebar">media</div>
+					<div class="links-body">
+						<a href="https://youtube.com">youtube</a>
+						<a href="https://netflix.com">netflix</a>
+						<a href="https://www.hbonow.com/">hbonow</a>
+						<a href="https://twitch.tv">twitch</a>
+					</div>
+				</div>
+				<div class="links-box" id="dev-links">
+					<div class="links-titlebar">development</div>
+					<div class="links-body">
+						<a href="https://github.com">github</a>
+						<a href="https://stackoverflow.com">stack overflow</a>
+						<a href="https://codepen.io">codepen</a>
+						<a href="https://freecodecamp.com">freecodecamp</a>
+					</div>
+				</div>
+				<div class="links-box last" id="tools-links">
+					<div class="links-titlebar">tools</div>
+					<div class="links-body">
+						<a href="https://mail.google.com">gmail</a>
+						<a href="https://drive.google.com">google drive</a>
+						<a href="https://dropbox.com">dropbox</a>
+						<a href="https://analytics.google.com">google analytics</a>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
