--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	</head>
 	<body>
 		<div class="nav-container">
-			<input id="search" />
+			<form action="https://duckduckgo.com/" autocomplete="off">
+				<input type="text" name="q" id="search" />
+			</form>
 			<div class="links-list">
 				<div class="links-box" id="social-links">
 					<div class="links-titlebar">social</div>
