--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<div class="links-titlebar">development</div>
 					<div class="links-body">
 						<a href="https://github.com">github</a>
-						<a href="https://stackoverflow.com">stack overflow</a>
+						<a href="https://codeschool.com">codeschool</a>
 						<a href="https://codepen.io">codepen</a>
 						<a href="https://freecodecamp.com">freecodecamp</a>
 					</div>
