Replaced hbonow with hulu

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<div class="links-body">
 						<a href="https://youtube.com">youtube</a>
 						<a href="https://netflix.com">netflix</a>
-						<a href="https://www.hbonow.com/">hbonow</a>
+						<a href="https://hulu.com/">hulu</a>
 						<a href="https://twitch.tv">twitch</a>
 					</div>
 				</div>
