Update autofocus for searchbox

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<div class="nav-container">
 			<form action="https://duckduckgo.com/" autocomplete="off">
-				<input type="text" name="q" id="search" />
+				<input type="text" name="q" id="search" autofocus>
 			</form>
 			<div class="links-list">
 				<div class="links-box" id="social-links">
