Change dropbox to laverna

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<div class="links-body">
 						<a href="https://mail.google.com">gmail</a>
 						<a href="https://drive.google.com">google drive</a>
-						<a href="https://dropbox.com">dropbox</a>
+						<a href="https://laverna.cc/app/">laverna</a>
 						<a href="https://analytics.google.com">google analytics</a>
 					</div>
 				</div>
