Replace slack with trello

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<a href="https://github.com">github</a>
 						<a href="https://news.ycombinator.com/">hacker news</a>
 						<a href="https://codepen.io">codepen</a>
-						<a href="https://cachednerds.slack.com/">slack</a>
+						<a href="https://tello.com/">trello</a>
 					</div>
 				</div>
 				<div class="links-box last" id="tools-links">
